--- a/.github/workflows/stats-update.yml
+++ b/.github/workflows/stats-update.yml
@@ -12,9 +12,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout do Repositório
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
-      - name: Atualizar README
-        uses: teoxoy/profile-readme-stats@v1
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Atualizar README com GitHub Stats
+        run: |
+          curl -o README.md "https://github-readme-stats.vercel.app/api?username=Cleiltonss&show_icons=true&theme=radical"
+      
+      - name: Commit e Push se Alterado
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git pull origin main || echo "Nenhuma atualização para pull"
+          git add README.md
+          git commit -m "Atualizar GitHub Stats [Automático]" || echo "Nada para comitar"
+          git push
